# DE-Training-GM

./: README.md
Day1/: dummy.txt  readparquet.py  sample-file.txt.txt  sample.txt  test1.py  test2.py
Day10/case_study/: etl.py  (+3 more)
Day11/: continuous.py  micro_batch.py  practice.py  practice_v2.py  read.bat  read.py
Day12/: Untitled Notebook 2025-07-29 15_22_27.ipynb
Day13/: generate_data.py  producer.py  transactions_10k.csv  transactions_data.csv
Day15/: create_sample_df.py
Day2/: comp-map.py  decorators.py  problem1.py  sample.ipynb
Day3/: dataset1.sql  queries1.sql  queries3.sql  queries4.sql
Day4/: queries1.sql  queries10.sql  queries11.sql  queries12.sql  queries2.sql  queries3.sql  queries4.sql  queries6.sql  queries7.sql  queries8.sql  queries9.sql  seed_data.sql
Day5/: script1.py
Day6/: Commands.txt  SPARKspark.txt  activity.csv  data.csv  lab1.py  lab2.py  lab3.py  lab_dataframe.py  orders.csv  products.csv  user_activity.csv  users.csv
Day7/: create_delta.bat  create_delta.py  load_csv_to_delta.py  loadcsvdelta.bat  sample.json  sample.py  sample3.bat  sample3.py  sample4.bat  sample4.py
Day8/: prog1.py  prog2.py
Week1_Case_Study/airport_parking_toolkit/: pyproject.toml
Week1_Case_Study/airport_parking_toolkit/src/airport_parking_toolkit/: cli_etl_tool.py  queries.sql  read_files.py  schema.sql
Week1_Case_Study/airport_parking_toolkit/src/airport_parking_toolkit/datasets/: parking_events.txt  parking_zones.txt
Week2_Case_Study/: make_bv.bat  make_bv.py  make_data_vault.bat  make_data_vault.py  make_ss_view.bat  make_ss_view.py
(+133 files in other folders)
