[project]
name = "airport-parking-toolkit"
version = "0.1.0"
description = ""
authors = [
    {name = "gauravms07",email = "gmshastry7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "coverage (>=7.9.2,<8.0.0)",
    "pyspark (>=4.0.0,<5.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]

[tool.poetry]
packages = [{include = "airport_parking_toolkit", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
